k8s/dev/ai-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: dev
  labels:
    app: ai-service
spec:
  type: ClusterIP
  ports:
    - port: 5006
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ai-service
